--- a/ProjetoCarros/src/main/resources/application.properties
+++ b/ProjetoCarros/src/main/resources/application.properties
@@ -1,14 +1,11 @@
 spring.application.name=ProjetoCarros
-spring.datasource.url=jdbc:h2:mem:carrosdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/db_carros
+spring.datasource.username=root
+spring.datasource.password=11042006
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # Criar e atualizar automaticamente as tabelas
 spring.jpa.hibernate.ddl-auto=update
 
-# Console H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 
