--- a/ProjetoCarros/src/main/resources/application.properties
+++ b/ProjetoCarros/src/main/resources/application.properties
@@ -1,11 +1,21 @@
 spring.application.name=ProjetoCarros
-spring.datasource.url=jdbc:mysql://localhost:3306/db_carros
-spring.datasource.username=root
-spring.datasource.password=11042006
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+server.port=8080
 
-# Criar e atualizar automaticamente as tabelas
+# Banco H2 em modo arquivo (cria um arquivo local chamado testdb.h2)
+spring.datasource.url=jdbc:h2:~/testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=1104
+
+# Dialecto JPA para H2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Mostrar SQL no console
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# Ativar console web do H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 
